tests/fw_rules_tests/policies/test15-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-specific-pods-in-external-namespace
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: ibm-system-newNameSpace
        podSelector:
          matchLabels:
            ibm-cloud-provider-lb-app: keepalived
